--- a/DATA_CONTRACTS/PRACTICE/PRACTICE.yaml
+++ b/DATA_CONTRACTS/PRACTICE/PRACTICE.yaml
@@ -679,7 +679,7 @@ dataset:
         transformSourceTables: null
         transformLogic: null
         transformDescription: null
-        sampleValues: 5321 BRANDYWINE STE 11 | 19803
+        sampleValues: 3255 BRANDYWAY STE 21 | 34732
       - column: addresstoken2
         isPrimary: false
         businessName: addresstoken2 
